<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>
    <string name="weight">peso (kg) ex:55 </string>
    <string name="height">altura (cm) ex:170</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.<br></br> <br></br>Preencha os campos de peso e altura para descobrir o seu IMC </string>
    <string name="calc">Calcular</string>
    <string name="test">TESTE</string>
    <string name="fields_message">Todos os campos devem ser preenchidos sem pontos e diferentes de zero</string>
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="dados">Cronômetro iniciado </string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">Imc: %1$.2f</string>
    <string name="list_response">resultado: %1$.2f, data: %2$s </string>

    <string name="save">Salvar</string>
    <string name="calc_saved">Registro salvo com sucesso</string>
    <string name="calc_removed">Registro removido com sucesso</string>
    <string name="search">Buscar</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="age">Idade</string>
    <string name="tmb_response">Tmb: %1$.2f</string>
    <string name="delete_message">Você realmente quer excluir o registro?</string>
    <string name="cancel">Cancelar</string>
    <string name="Imc_response">Imc: %1$.2f</string>
    <string name="saved">Registro salvo com sucesso!!!</string>
    <string name="tabela">Tabela Exibir</string>
    <string name="Teste">LISTA</string>
    <string name="Teste2">LISTA</string>
    <string name="crono">TIMER</string>
    <string name="pause"> Pausado</string>
    <string name="start">Iniciar</string>
    <string name="finish">Finalizar</string>
    <string name="buttonpause">Segure para pausar</string>
    <string name="exercise">Série de exercícios do dia</string>
</resources>